src/app/components/diff-viewer/diff-viewer.component.scss
@import "../../../styles";

.card-body {
  border-bottom: .1em solid rgba(128, 128, 128, .3);
  padding: 1em;
}

.form-inline {
  padding: 1em;
}

.diff-container {
  height: calc(100vh - 13.5em);
  overflow-y: auto;
}

.linenumber-block {
  line-height: 1.6;
  font-size: 87.5%;
  padding: .5em .5em 1.1em .5em;
  display: flex;
  flex-direction: column;

  > div {
    flex-grow: 1;
  }

  .linenumber {
    text-align: right;
    flex-grow: 1;
    margin-bottom: -.005em;
    padding-left: 1em;
    min-width: 3em;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
}
.addition {
  background-color: rgba(0, 255, 0, .4);
}

.deletion {
  background-color: rgba(255, 0, 0, .3);
}

.hunk {
  margin-top: .5em;
  position: relative;

  &:hover .float-btn-container {
    opacity: 1;
  }

  .float-btn-container {
    opacity: 0;
    transition: opacity .5s;
    position: absolute;
    top: .5em;
    right: .5em;

    .btn {
      width: 3em;
      height: 3em;
    }
  }
}

.line-overlay {
  position: absolute;
  left: 0;
  right: 0;
  height: 1.55em;
  margin-top: -.1em;
  pointer-events: none;
  mix-blend-mode: multiply;
}

.tag {
  color: white;
  padding: .7em;
  border-radius: $border-radius;
}

.Changed {
  background-color: $status-changed;
}

.Moved {
  background-color: $status-moved;
}

.Renamed {
  background-color: $status-renamed;
}

.Added {
  background-color: $status-added;
}

.Deleted {
  background-color: $status-deleted;
}

.card-header .badge {
  font-size: 1.1em;
}

.tag-container {
  margin: -.5em 0;
  height: 2.8em;
}

.code-line-block textarea {
  font-family: "Courier New", monospace;
  font-size: 87.5%;
  line-height: 1.3;
  width: 100%;
  background-color: rgba(240, 240, 240, .9);
}

.btn-circle {
  height: 3em;
  width: 3em;
}

.code-line-block {
  overflow-x: auto; // necessary but non-functional

  pre {
    overflow-x: visible;
    border-radius: $border-radius;
    margin: 0;

    code {
      line-height: 1.6;
      background: rgba(255, 255, 255, .85);
    }
  }
}

.normal-font-size {
  font-size: 1rem;
}

.filename {
  .copy-filename {
    font-size: .7em;
    transition: opacity .3s;
    opacity: 0;
  }

  &:hover .copy-filename {
    opacity: .8;
  }
}

